fix: title long text, overflow scroll

--- a/src/Components/ListTitle/listTitle.scss
+++ b/src/Components/ListTitle/listTitle.scss
@@ -3,12 +3,11 @@
    font-size: 22px;
    line-height: 33px;
    color: #2d2e46;
-   max-width: 360px;
-   overflow: scroll;
+   word-break: break-all;
 }
 @media screen and (max-width: 990px) {
    .list-title {
-      text-align: center;
+      margin: 0 auto;
    }
 }
 @media screen and (max-width: 580px) {
