--- a/src/Components/ModalContainer/modalContainer.scss
+++ b/src/Components/ModalContainer/modalContainer.scss
@@ -20,7 +20,7 @@
       align-items: center;
       &-text {
          max-width: 250px;
-         overflow: scroll;
+
          text-align: center;
          margin-left: 5px;
       }
